<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">抓包精灵</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="action_share">分享</string>
    <string name="share_with_friends">分享给好友</string>
    <string name="suggestion">意见反馈</string>
    <string name="encourage">给我鼓励</string>
    <string name="current_version">当前版本</string>
    <string name="get_version_failed">获取当前版本号失败</string>
    <string name="suggestion_hint">感谢您对抓包精灵的支持, 请输入您宝贵的意见</string>
    <string name="send">发送</string>
    <string name="share_string">我发现个超级好用的软件，推荐给你哦，名字叫抓包精灵，现在已经在Android市场上线了,下载地址:http://apk.hiapk.com/appinfo/com.sprintwind.packetcapturetool,赶快行动吧!</string>
    <string name="press_to_exit">再按一次返回键退出程序</string>
    <string name="sdcard_not_exist">SD卡不存在,请插入SD卡后重试</string>
    <string name="no_root_permission">您的手机还没有获得root权限，请先获取root权限</string>
    <string name="all_interfaces">所有网口</string>
    <string name="chose_interface" translatable="false">网口名称</string>
    <string name="choose_protocol">协议类型</string>
    <string name="capture_size">抓取长度</string>
    <string name="click_to_chose">点击这里选择</string>
    <string name="click_to_set">点击这里设置</string>
    <string name="havent_chose">沒有选择</string>
    <string name="empty_file_name">文件名不能为空</string>
    <string name="regenerate_file_name">以当前时间重新生成文件名</string>
    <string name="invalid_file_name">文件名不能包含^，/，\,>,*,?,|等特殊字符</string>
    <string name="file_exits">文件已存在，是否覆盖？</string>
    <string name="starting_capture">正在启动抓包&#8230;</string>
    <string name="capturing">正在抓包&#8230;</string>
    <string name="default_capture_size">65535</string>
    <string name="invalid_capture_size">抓取长度超出范围（24&#8211;65535）</string>
    <string name="save_file_name">保存文件名</string>
    <string name="pcap_file_suffix">.pcap</string>
    <string name="start_capture" translatable="false">开始抓包</string>
    <string name="stop_capture" translatable="false">停止抓包</string>
    <string name="stopping_capture">正在停止抓包&#8230;</string>
    <string name="capture_started" translatable="false">开始抓包&#8230;</string>
    <string name="capture_stopped" translatable="false">抓包已停止，抓包文件保存在：</string>
    <string name="capture_failed">开启抓包失败,请确保您的手机已经具有root权限,并且在应用弹出的获取root权限界面选择了允许</string>
    <string name="stop_capture_failed">停止抓包失败,可能抓包没有成功开启,请勿频繁点击开始抓包按钮</string>
    <string name="excute_failed" translatable="false">执行失败</string>
    <string name="title_prompt" translatable="false">提示</string>
    <string name="get_root_permission_fail" translatable="false">获取root权限失败</string>
    <string name="confirm" translatable="false">确定</string>
    <string name="title_activity_rsplash">RSplashActivity</string>
    <string name="capture">抓包</string>
    <string name="analyze">解析</string>
    <string name="more">更多</string>
    <string name="browse">浏览</string>
    <string name="title_activity_analyze">报文概要信息</string>
    <string name="time">时间:</string>
    <string name="protocol">协议类型:</string>
    <string name="packet_length">报文长度:</string>
    <string name="arrow">--></string>
    <string name="title_activity_capture">CaptureActivity</string>
    <string name="title_activity_analyze_activity2">AnalyzeActivity2</string>
    <string name="analyzing">正在解析</string>
    <string name="waitting_for_analyzing">正在解析,请稍后&#8230;</string>
    <string name="title_activity_csplash">CSplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_packet_detail">报文详细信息</string>
    <string name="ether_header">Ethernet</string>
    <string name="arp_header">ARP(Address Resolution Protocol)</string>
    <string name="ip_header">IP(Internet Protocol)</string>
    <string name="udp_header">UDP(User Datagram Protocol)</string>
    <string name="tcp_header">TCP(Transmission Control Protocol)</string>
    <string name="title_activity_more">MoreActivity</string>
    <string name="title_activity_suggestion">SuggestionActivity</string>

</resources>
