<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.sprintwind.packetcapturetool.CaptureActivity" 
    android:orientation="vertical"	>
    
    <ListView
        android:id="@+id/lstVwSettings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="2dp"
        android:dividerHeight="4dp"
        android:divider="@color/whitegray">
    </ListView>
    
   <!-- 保存文件名 -->
   <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/lnrlytStyleSaveFileName"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
   <TextView 
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:text="@string/save_file_name"
	       style="@style/txtvwStyleBig2"
	       android:id="@+id/tvFileName" >
   </TextView>
   		<LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	         >
		   <EditText 
		       android:layout_width="wrap_content"
		       android:layout_weight="5"
		       android:layout_height="wrap_content"
		       android:inputType="textCapCharacters"
		       android:layout_marginLeft="10dp"
		       style="@style/edttxtStyleFileName"
		       android:id="@+id/etFileName" >
		   </EditText>
		    <TextView 
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:layout_weight="1"
		       android:layout_marginRight="10dp"
		       android:text="@string/pcap_file_suffix" >
		    </TextView>
	    </LinearLayout>
	    
   		<Button 
   		    android:id="@+id/btnReGenerateFileName"
   		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    style="@style/btnStyleRedBorder"
		    android:layout_margin="5dp"
			android:paddingLeft="20dp"
			android:paddingRight="20dp"
   		    android:text="@string/regenerate_file_name"
   		    />
   </LinearLayout>
   
   <Button 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      style="@style/btnStyleRed"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="10dp"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:id="@+id/btnStartCapture"
      android:text="@string/start_capture"/>

</LinearLayout>

